# CryptoTradingBot-

./: CMakeLists.txt  Dockerfile  README.md
src/: aws_lambda_handler.cpp  aws_lambda_handler.h  dynamodb_utils.cpp  dynamodb_utils.h  main.cpp  market_analysis.cpp  market_analysis.h  trading.cpp  trading.h
